Fix alignment of dropdown menus attached to centered settings buttons.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -65,6 +65,7 @@ legend small > .light {
   margin-top: 10px;
   max-height: 210px;
   overflow-y: auto;
+  text-align: left;
 }
 
 .recipe-search-control .my-dropdown-menu {
